@@ -1,4 +1,5 @@
 3.0.18.0 (open)
+ * Add a script to make running the cqlsh tests in cassandra repo easier (CASSANDRA-14951)
  * If SizeEstimatesRecorder misses a 'onDropTable' notification, the size_estimates table will never be cleared for that table. (CASSANDRA-14905)
  * Fix cassandra-stress write hang with default options (CASSANDRA-14616)
  * Backport: Flush netty client messages immediately (not by default) (CASSANDRA-13651)
